# php-vpack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.m4  config.w32
examples/: json2vpack.php  serializable.php  serializer.php  simple.php  vpack2json.php
include/: Builder.h  Serializable.h  Serializer.h  Slice.h  Tagged.h  TypeMapper.h  php_vpack.h  vpack_aliases.h  vpack_classes.h  vpack_exceptions.h
src/: Builder.cpp  Slice.cpp  TypeMapper.cpp  php_vpack.cpp
tests/: 001_basic.phpt  002_serializable.phpt  003_serializer.phpt  004_big.phpt  005_loop.phpt
